# zarchive

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  justfile
derive/: Cargo.toml
derive/src/: lib.rs  validate.rs
src/: archive.rs  error.rs  lib.rs  pack.rs  universal.rs  zerocopy.rs
src/archive/: adapter.rs  entry.rs  file.rs  footer.rs
src/pack/: path.rs  path_nodes.rs
src/raw/: big_endian.rs  entry.rs  footer.rs
src/universal/: edit.rs  path_nodes.rs
src/zerocopy/: edit.rs  entry.rs  mod.rs  order.rs  record.rs
