[package]
name = "zarchive2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "low-level library for manipulating the zarchive format"

[features]
default = ["alloc", "std", "zerocopy"]
alloc = [
    "core2/alloc",
    "encoding_rs/alloc",
    "unix_path/alloc",
    "zerocopy/alloc",
]
std = [
    "core2/std",
    "thiserror_core2/std",
    "unix_path/std",
    "dep:zstd",
    "zstd-safe/std",
]
zerocopy = ["dep:zerocopy"]

[dependencies]
core2 = { version = "0.4.0", default-features = false }
encoding_rs = { version = "0.8.33", default-features = false }
thiserror_core2 = { version = "2.0.1", default-features = false }
unix_path = { version = "1.0.1", default-features = false }
zerocopy = { version = "0.7.0", features = ["derive"], optional = true }
zstd = { version = "0.12.4", optional = true }
zstd-safe = { version = "6.0.6", default-features = false }
